@@ -1,3 +1,6 @@
+Changes since 1.3e:
+ o Make the entire evdns.h header enclosed in "extern C" as appropriate.
+
 Changes since 1.3d:
  o demote most http warnings to debug messages
  o Fix compilation on Solaris; from Magne Mahre
